Colaboratory를 통해 생성됨

--- a/bigdata_processing_4th_week_HDFS_.ipynb
+++ b/bigdata_processing_4th_week_HDFS_.ipynb
@@ -6,7 +6,7 @@
       "name": "bigdata_processing_4th_week_HDFS_.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPYU+yKL21iFMtmRBkJONiv",
+      "authorship_tag": "ABX9TyOJE6DZXMvcN4azHSadw4PX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -258,7 +258,7 @@
         "HDFS dfs -mkdir 명령어로 디렉토리를 생성해 본다.\n",
         "\n",
         "```\n",
-        "hdfs dfs -mkdir cuk/\n",
+        "hdfs dfs -mkdir /cuk\n",
         "```"
       ]
     },
